deployment/istio/http-app/backend-routing.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: backend
  spec:
    host: backend.demo.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: backend-route
  spec:
    hosts:
    - backend.demo.svc.cluster.local
    http:
    - match:
      - headers:
          x-backend-version:
            exact: v2
      route:
      - destination:
          host: backend.demo.svc.cluster.local
          subset: v2
    - route:
      - destination:
          host: backend.demo.svc.cluster.local
          subset: v1
