deployment/istio/http-app/getsomeurl-virtaulservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: istio-ingress-routes
    namespace: istio-system
  spec:
    hosts:
    - "*"
    gateways:
    - istio-gateway
    http:
    - match:
      - uri:
          exact: /gettime
      rewrite:
        uri: /
      route:
      - destination:
          host: frontend.demo.svc.cluster.local
          port:
            number: 80
    - match:
      - uri:
          exact: /gettime-nohead
      rewrite:
        uri: /noheaders
      route:
      - destination:
          host: frontend-nh.demo.svc.cluster.local
          port:
            number: 80
